[package]
name = "fastq_gc"
version = "0.2.3"
edition = "2021"
authors = ["Simon Heath <simon.heath@gmail.com>"]
description = "Utility to estimate GC distribution from FASTQ file"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "~0.4"
stderrlog = "~0.5"
anyhow = "~1.0"
clap = {version = "~4", features = ["cargo"]}
compress_io = "~0.5"
regex = "1"
crossbeam-channel =  "~0.5"
crossbeam-utils = "~0.8"
serde = {version = "~1.0", features = ["derive"]}
serde_json = "~1.0"
chrono = "~0.4"
